# aircot

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  requirements_test.txt  setup.cfg  setup.py  stdeb.cfg  tox.ini
.github/workflows/: debian.yml  python-app.yml  python-package.yml
aircot/: __init__.py  constants.py  functions.py
docs/: index.md  installation.md
src/aircot/: __init__.py  constants.py  functions.py
src/aircot/data/: cotdb.json  cotdb.txt  cotdb_indexed.json
tests/: test_aircot.py
