# Setup configuration for AirCOT: Aircraft classifiers for TAK
#
# Copyright Sensors & Signals LLC https://www.snstac.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[metadata]
name = aircot
version = file: src/aircot/VERSION
url = https://github.com/snstac/aircot
project_urls =
  CI: GitHub Actions = https://github.com/snstac/aircot/actions
  GitHub: issues = https://github.com/snstac/aircot/issues
  GitHub: repo = https://github.com/snstac/aircot
description = Software for classifying aircraft within TAK.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Greg Albrecht
maintainer_email = oss@undef.net
license = Apache-2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords = 
  Cursor on Target
  ATAK
  WinTAK
  TAK Server
  ADS-B
  Aircraft

[options]
packages = find_namespace:
package_dir = 
  = src
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
aircot.data = 
  *.csv
  *.txt
  *.json

[options.extras_require]
test = 
  pytest>=6.0
  pytest-cov
  pylint
  flake8
  black

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E704

[pylint]
max-line-length = 88

[pycodestyle]
ignore = E203
max_line_length = 88
